feat: version participant task terms
